question showing box's padding and overflowing fixed

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 #question {
-  height: 100px;
+  min-height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,6 +32,7 @@ body {
   );
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
+  padding: 25px;
 }
 
 #display {
@@ -79,6 +80,9 @@ body {
 /* added css style */
 .mt-4{
   margin-top: 40px;
+}
+.mt-3{
+  margin-top: 30px;
 }
 
 #show-time{
